--- a/views/acco.hbs
+++ b/views/acco.hbs
@@ -339,7 +339,7 @@
              <div class="job">Web designer</div>
            </div>
          </div>
-         <i class='bx bx-log-out' id="log_out" ></i>
+         <a href="/"><i class='bx bx-log-out' id="log_out" ></i></a>
      </li>
     </ul>
   </div>
