--- a/views/email.handlebars
+++ b/views/email.handlebars
@@ -164,7 +164,7 @@ table, td { color: #000000; } #u_body a { color: #f1c40f; text-decoration: under
     <tr>
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:60px 10px 0px 30px;font-family:'Open Sans',sans-serif;" align="left">
         
-  <h1 class="v-line-height v-font-size" style="margin: 0px; line-height: 140%; text-align: left; word-wrap: break-word; font-weight: normal; font-family: 'Open Sans',sans-serif; font-size: 20px;"><strong>This Thanksgiving, We’re Thankful for Your Support!</strong></h1>
+  <h1 class="v-line-height v-font-size" style="margin: 0px; line-height: 140%; text-align: left; word-wrap: break-word; font-weight: normal; font-family: 'Open Sans',sans-serif; font-size: 20px;"><strong>`Conguralution {{title}}Your Account is Successfully Created`</strong></h1>
 
       </td>
     </tr>
@@ -177,9 +177,9 @@ table, td { color: #000000; } #u_body a { color: #f1c40f; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 30px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div class="v-line-height" style="color: #747474; line-height: 180%; text-align: justify; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 180%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+    <p style="font-size: 14px; line-height: 180%;">congratulation </p>
 <p style="font-size: 14px; line-height: 180%;"> </p>
-<p style="font-size: 14px; line-height: 180%;">Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo knowns magna verra maecenas commodo accumsan.</p>
+<p style="font-size: 14px; line-height: 180%;">YOU ACCOUT HAS BEEN SUCCESFULLY CREATED</p>
   </div>
 
       </td>
@@ -192,7 +192,7 @@ table, td { color: #000000; } #u_body a { color: #f1c40f; text-decoration: under
     <tr>
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 60px 30px;font-family:'Open Sans',sans-serif;" align="left">
         
-  <h1 class="v-line-height v-font-size" style="margin: 0px; line-height: 200%; text-align: left; word-wrap: break-word; font-weight: normal; font-family: 'Open Sans',sans-serif; font-size: 16px;">None of this would be possible without you.<br /><strong>THANK YOU!<br />AKSHAT</strong></h1>
+  <h1 class="v-line-height v-font-size" style="margin: 0px; line-height: 200%; text-align: left; word-wrap: break-word; font-weight: normal; font-family: 'Open Sans',sans-serif; font-size: 16px;">None of this would be possible without you.<br /><strong>Regards from<br />AKSHAT</strong></h1>
 
       </td>
     </tr>
