--- a/main.handlebars
+++ b/main.handlebars
@@ -164,7 +164,7 @@ table, td { color: #000000; } #u_body a { color: #f1c40f; text-decoration: under
     <tr>
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:60px 10px 0px 30px;font-family:'Open Sans',sans-serif;" align="left">
         
-  <h1 class="v-line-height v-font-size" style="margin: 0px; line-height: 140%; text-align: left; word-wrap: break-word; font-weight: normal; font-family: 'Open Sans',sans-serif; font-size: 20px;"><strong>This Thanksgiving, We’re Thankful for Your Support!</strong></h1>
+  <h1 class="v-line-height v-font-size" style="margin: 0px; line-height: 140%; text-align: left; word-wrap: break-word; font-weight: normal; font-family: 'Open Sans',sans-serif; font-size: 20px;"><strong>Conguralution {{title}}Your Account is Successfully Created</strong></h1>
 
       </td>
     </tr>
@@ -192,7 +192,7 @@ table, td { color: #000000; } #u_body a { color: #f1c40f; text-decoration: under
     <tr>
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 60px 30px;font-family:'Open Sans',sans-serif;" align="left">
         
-  <h1 class="v-line-height v-font-size" style="margin: 0px; line-height: 200%; text-align: left; word-wrap: break-word; font-weight: normal; font-family: 'Open Sans',sans-serif; font-size: 16px;">None of this would be possible without you.<br /><strong>THANK YOU!<br />AKSHAT</strong></h1>
+  <h1 class="v-line-height v-font-size" style="margin: 0px; line-height: 200%; text-align: left; word-wrap: break-word; font-weight: normal; font-family: 'Open Sans',sans-serif; font-size: 16px;">None of this would be possible without you.<br /><strong>Regards from<br />AKSHAT</strong></h1>
 
       </td>
     </tr>
